# einstein

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 41e2dc1bb30f_first.py
app/: main.py
app/api/: __init__.py
app/api/authentication/: crud.py  schemas.py  views.py
app/api/users/: crud.py  views.py
app/auth/: __init__.py  authentication_manager.py  pwd_manager.py
app/core/: __init__.py  conf.py  mixins.py
app/core/dependencies/: __init__.py  ai.py
app/db/: __init__.py  db.py  helper.py
app/models/: __init__.py  chapters.py  courses.py  otps.py  users.py
app/routers/: __init__.py
app/routers/admin/: __init__.py
app/routers/admin/auth/: crud.py  schemas.py  views.py
app/routers/admin/courses/: crud.py  schemas.py  views.py
app/routers/admin/users/: crud.py  schemas.py  views.py
app/routers/api/: __init__.py
app/routers/api/authentication/: crud.py  schemas.py  views.py
app/routers/api/chapters/: crud.py  schemas.py  views.py
app/routers/api/courses/: crud.py  schemas.py  views.py
app/routers/api/users/: crud.py  schemas.py  views.py
app/routers/media/: __init__.py
app/routers/media/chapters/: views.py
app/routers/media/courses/: views.py
app/utils/: __init__.py  file.py  file_manager.py  mail.py  mail_mngr.py  path.py  security.py
